--- a/css/styles.css
+++ b/css/styles.css
@@ -217,3 +217,10 @@ a.custom-card:hover {
   font-weight: 100;
   font-size: 1.4em;
 }
+#email{
+  
+  border:none;
+  background:none;
+  outline: none;
+  box-shadow: none;
+}
