--- a/css/styles.css
+++ b/css/styles.css
@@ -244,6 +244,13 @@ body {
   color:var(--color-fuente) 
 }
 
+.userIcon{
+  width: 25px;
+  height: 25px;
+  padding: 2px;
+}
+
+
 .list-group-item,
 .carousel {
   background-color:var(--color-fondo);
