--- a/css/styles.css
+++ b/css/styles.css
@@ -22,37 +22,6 @@ nav a {
   user-select: none;
 }
 
-@media (min-width: 768px) {
-  .bd-placeholder-img-lg {
-    font-size: 3.5rem;
-  }
-}
-
-@media (min-width: 768px) {
-  .jumbotron {
-    padding-top: 6rem;
-    padding-bottom: 6rem;
-  }
-}
-
-.jumbotron p:last-child {
-  margin-bottom: 0;
-}
-
-.jumbotron-heading {
-  font-weight: 300;
-}
-
-.jumbotron .container {
-  max-width: 40rem;
-  background-color: rgba(255, 255, 255, 0.5);
-  border-radius: 10px;
-  text-shadow: 1px 1px 2px grey;
-}
-
-.jumbotron .lead {
-  font-size: 38px;
-}
 
 footer {
   padding-top: 3rem;
@@ -395,3 +364,15 @@ input:checked + .slider:before {
 tr {
   color: var(--color-fuente)
 }
+
+/*Quita las flechas de lo input type number*/
+.no-arrow-input[type="number"]::-webkit-inner-spin-button,
+.no-arrow-input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
+.modal-content {
+  background-color: var(--color-fondo); /* Cambia el color a tu elección */
+}
+
+
